--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 :root{
-    --nav-backgrd-clr:#024400;
+    --nav-backgrd-clr:#000000;
     --btn-hover-clr:#ffda95;
-    --canvas-border-clr:#6e440d;
+    --canvas-border-clr:#000000;
 }
 * {box-sizing:border-box;}
 body{
@@ -16,7 +16,7 @@ nav{
     display: flex; /*Pour centre l'image avec le margin auto*/
 }
 nav img{
-    margin:10px auto 10px auto; /*centrage image*/
+    margin:1px auto 1px auto; /*centrage image*/
     height: 125px;
 }
 main{
@@ -30,7 +30,7 @@ main{
 }
 #playing-info{
     width: 1200px; /*idem canvas*/
-    margin-top: 20px;
+    height: 680;
     margin-left:auto;margin-right: auto; /*pour centrage*/
     letter-spacing: 0.05em;
     display: flex; 
@@ -42,9 +42,10 @@ main{
     align-items:center;
     justify-content: center;
     font-size: 1.3em;
+    color: #edb611;
 }
 .info-container img{
-    height: 40px;
+    height: 25px;
     margin: 10px;
 }    
 .info-container p{    
@@ -54,7 +55,7 @@ main{
     cursor:pointer;
 }
 canvas{    
-    background-position: 0 20%;
+    background-position: 0 0%;
     background-repeat: no-repeat;
     background-size: cover;
     border:10px solid var(--canvas-border-clr);
@@ -80,8 +81,8 @@ canvas{
     margin-left: 10px; margin-right: 10px;
 }
 .btn:hover{
-    color: var(--canvas-border-clr);
-    border-color: var(--canvas-border-clr);
+    color: #edb611;
+    border-color:#edb611;
 }
 .clignote {
     color:white;
